--- a/src/pages/dashboards/css/Navbar5.module.css
+++ b/src/pages/dashboards/css/Navbar5.module.css
@@ -7,6 +7,32 @@ font-size: 30px;
 color: #2E2E2E;
 
 }
+
+@media  (max-width:991px){
+    .mobile{
+        width: 10%;
+    }
+
+}
+a{
+    text-decoration:solid;
+}
+a:link {
+    color: red;
+  }
+  a:visited {
+    color: rgb(69, 99, 109);
+  }
+  
+  a:hover {
+      scale:1.1;
+    text-shadow:0px 2px 5px rgb(197, 184, 6);
+  }
+  
+
+  a:active {
+    color: blue;
+  }
 .all{
  align-items: center; 
     width:100%;
