--- a/src/pages/dashboards/css/Navbar5.module.css
+++ b/src/pages/dashboards/css/Navbar5.module.css
@@ -20,14 +20,12 @@ a{
 a:link {
     color: red;
   }
-  a:visited {
-    color: rgb(69, 99, 109);
-  }
+
   
   a:hover {
-      scale:1.1;
-    text-shadow:0px 2px 5px rgb(197, 184, 6);
+      color: black;
   }
+     
   
 
   a:active {
