--- a/src/pages/dashboards/css/NavbarGroup.module.css
+++ b/src/pages/dashboards/css/NavbarGroup.module.css
@@ -15,9 +15,14 @@
 }
 @media (max-width: 767px){
     .navbarToggle{
-        margin-top:0px;
-        border: 1px solid #9DA7BB;
-        margin-left: 20px;
+     margin-top: -10px;
+     margin-left: 280px;
+     justify-content: end;
+     
+    }
+    .BrandImgMe{
+        margin: auto;
+        margin-top:-5px
     }
     .navbarCollapse li{
         margin: auto;
@@ -32,52 +37,53 @@
 
     }
     .navbarCollapse{
-        margin-left: 0px;
-        margin-top: 10px;
-        width: 300px;
-        height: auto;
-        margin: auto;
+        margin-left: -320px;
+        margin-top: 20px;
+        width: 200px;
+       text-align: center;
+    
         background-color: #1E1E1E;
         border-radius: 10px;
         z-index: 1;
-        position: inherit;
+        position: absolute;
+
     }
     .linked{
         color: white;
     }
     
 }
-@media (min-width:768px) and (max-width:1024px){
-    .navbarToggle{
-        margin-top: 0px;
-    }   
-    .navbarCollapse   {
-        margin-left: 0px;
-        margin-top: 10px;
-        width: 300px;
-        height: auto;
-        margin: auto;
-        text-align: center;
-        background-color: #1E1E1E;
-        border-radius: 10px;
-        z-index: 1;
-      
-        align-content: space-around;
 
+@media (min-width:768px) and (max-width:990px){
+  
+    .BrandImgMe{
+        margin-top: -5px;
     }
-   
+    .navbarToggle{
+        margin-top: -10px;
+        margin-left: 400px;
+        
+    }
+    .navbarCollapse {
+        background-color: black;
+        width: 200px;
+        height: auto;
+        color: white;
+        margin: auto;
+        border-radius: 5px;
+        text-align: center;
+        margin-left: 200px;
+        position: absolute;
+        z-index: 1;
+    }
+    .selected{
+        margin-top: 10px;
+    }
     .linked{
         color: white;
-        width: 100%;
-        display: inline-block;
-        font-size: 11px;
-    }
-  
-    .navbarMenu ul{
-        margin-top: 30px;
-        margin-left: 30px;
 
-  }
+    }
+
 }
 .navbarMenu ul li{
     text-decoration: none;
