--- a/src/pages/dashboards/css/Navbar1.module.css
+++ b/src/pages/dashboards/css/Navbar1.module.css
@@ -94,7 +94,7 @@ border-radius: 0px;
     opacity: 0,5;
 }
 .star2{
-  
+    margin-left: -28px;
     border-radius: 0px;
     
     }
@@ -126,7 +126,7 @@ scale: 1.05;
 
     }
     .title1{
-        padding-left: 20px;
+        padding-left: 0px;
     
         border-radius: nullpx;
         font-family: SF Pro Display;
@@ -180,17 +180,17 @@ box-shadow: 0px 2px 2px 0px #0000001A;
         padding-top: 5px;
         color:white;
     position:absolute;
-    height: 22px;
+    height: 25px;
     width: 120px;
     left: 24px;
     top: 24px;
     border-radius: 2px;
     font-family: SF Pro Display;
-    font-size: 14px;
+    font-size: 16px;
     line-height: 17px;
     justify-content: center;
     text-align: center;
-    background: #10C8A0;
+    background-color: #E7436C;
     
     
     
