--- a/src/pages/dashboards/css/Navbar4.module.css
+++ b/src/pages/dashboards/css/Navbar4.module.css
@@ -4,8 +4,9 @@
     background-size: cover;
     padding-top:20px;  
 width: 100%;
+height: 497px;
 border-radius: 0px;
-}
+} 
 .text{
  
     
@@ -56,3 +57,72 @@ text-align: left;
     color: #FFFFFF;
 
 }
+.TextMeCenter{
+    display: flex;
+    width: 80%;
+    color: white;
+    position: relative;
+    margin: auto;
+    text-align: start;
+    justify-content: center;
+    margin-top: 100px;
+}
+.standUpInText{
+    
+font-family: SF Pro Display;
+font-size: 40px;
+line-height: 48px;
+color: #FFFFFF;
+margin-top: 20px;
+margin-left: 35px;
+}
+.standUpOpen{
+    margin-top: -100px;
+    font-weight: 900;
+    font-size: 95px;
+}
+.standUpClose{
+    font-weight: 900;
+    font-size: 95px;
+    margin-top: 50px;
+}
+.StivName{
+    text-align: start;
+    margin-left: 0px;
+    margin-top: 20px;
+    font-size: 25px;
+}
+.TextMeCenterUp{
+    width: 80%;
+    margin: auto;
+    border: 1px solid white;
+
+}
+@media (min-width:768px) and (max-width:1024px){
+    .TextMeCenter{
+        width: 100%;
+    }
+    .standUpClose{
+        margin-top: 180px;
+    }
+}
+@media (max-width:767px){
+    .TextMeCenter{
+        width: 100%;
+    }
+    .standUpInText{
+        font-size: 30px;
+    }
+    .standUpClose{
+        font-size: 60px;
+        margin-top: 200px;
+
+    }
+    .standUpOpen{
+        font-size: 60px;
+        margin-top: -30px;
+    }
+
+}
+
+
