--- a/src/pages/dashboards/css/Footer.module.css
+++ b/src/pages/dashboards/css/Footer.module.css
@@ -129,8 +129,12 @@ border-radius: 4px;
     .row1 p {
         text-align: center;
     }
+    .pay img{
+     padding-left: 30px;   
+    }
     .pay {
-        margin-top: -500px;
+     width:100%;   
+     padding-left: 30px;  
     }
     .payments {
         margin-bottom: 20px;
@@ -140,6 +144,15 @@ border-radius: 4px;
     }
 }
 
-@media (max-width:575px){
-
+@media (min-width:575px){
+.pay img{ 
+    width: 40px;
+    height: 40px;
+   }
 }
+@media (max-width:575px){
+    .pay img{ 
+        height: 40px;
+    width: 40px;   
+    }
+    }
