--- a/src/pages/dashboards/css/Navbar.module.css
+++ b/src/pages/dashboards/css/Navbar.module.css
@@ -195,6 +195,15 @@ cursor: pointer;
         text-align: start;
         justify-content: flex-start;
     }
+}
+    @media (max-width:768px){
+        Map{
+            width:100%;
+            height: 200px;
+            text-align: start;
+          
+        }
+
     .TextHeaderMenu h1{
         font-size: 45px;
     
