--- a/src/pages/dashboards/css/Footer.module.css
+++ b/src/pages/dashboards/css/Footer.module.css
@@ -6,7 +6,7 @@
 
 .container{
     width: 80%;
-    margin:auto;
+    margin:auto; 
 }
 .row {
     display: flex;
@@ -171,3 +171,186 @@ border-radius: 4px;
     }
     .pay{width: 100%;}
     }
+
+    
+
+.headers{
+    width: 100%;
+    height: 380px;
+    background-color: white;
+}
+.BlackHole{
+    width: 100%;
+    height: 30px;
+    background-color: #E5E5E5;
+}
+.navbar{
+    width: 100%;
+    height: 380px;
+    display: flex;
+    justify-content: space-between;
+}
+.ColumDiv{
+    display: flex;
+}
+.ulGroup {
+    position: inherit;
+    justify-content: space-around;
+    list-style-type: none;
+    width: 250px;
+}
+.ulGroup li{
+    color: #9DA7BB;
+    line-height: 30px;
+}
+.ulGroup li:hover{
+    color: black;
+    cursor: pointer;
+    transition: 0.2s;
+}
+.ulGroup li h4{
+    color: black;
+}
+.payGroup{
+    display: flex;
+    width: 260px;
+    height: 60px;
+    border-radius: 5px;
+    background-color: #F1F2F6;
+
+}
+.payGroup a{
+    justify-items: center;
+    text-align: center;
+    margin: auto;
+    
+}
+.payGroup a img{
+    
+    height: 20px;
+}
+.manzil{
+    margin-top: 60px;
+}
+.manzil p{
+    font-size: 15px;
+}
+.manzil Button{
+    padding:10px 40px;
+    background-color: #9DA7BB;
+    border-radius: 5px; 
+    border-radius: none;
+    border: none;
+}
+.manzil Button a{
+    font-size: 18px;
+    color: white;
+    margin-top: 10px;
+    text-decoration: none;
+}
+.manzil button:hover{
+    background-color:#9DA7BB;
+}
+.iconSites{
+    position: inherit;
+    margin-top: 30px;;
+    height: 41px;
+    width: 250px;
+    display: flex;
+
+
+}
+.iconSites a{
+    position: inherit;
+    height: 30px;
+    width: 30px;
+    background-color: #EBEDF1;
+    color: #9DA7BB;
+    margin-inline: 10px;
+    border-radius: 50%;
+    cursor: pointer;
+    box-shadow: rgba(0, 0, 0, 0.02)
+     0px 1px 3px 0px, 
+     rgba(27, 31, 35, 0.15)
+      0px 0px 0px 1px;
+
+}
+.iconSites a:hover{
+    box-shadow: rgba(50, 50, 93, 0.25)
+     0px 6px 12px -2px,
+      rgba(0, 0, 0, 0.3)
+       0px 3px 7px -3px;
+}
+.instagramIcon {
+    display: inline-block;
+    text-align: center;
+    color: #fff;
+    vertical-align: middle;
+    background: #d6249f;
+    background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%);
+    box-shadow: 0px 3px 10px rgba(0,0,0,.25);
+  }
+.iconSites a i{
+  font-size: 20px;
+  margin-left: 4px;
+  margin-top: 6px;
+}
+.iconSites a span{
+  font-size: 20px;
+  margin-left: 4px;
+  margin-top: 6px;
+}
+#iSites{
+    position: inherit;
+    margin-left: 0px;
+    z-index: 1;
+    color: white;
+
+}
+#fSites{
+    margin-left:5px;
+}
+.footerText{
+    color: #9DA7BB;
+    font-size: 10px;
+    margin-top: 20px;
+    margin-left: 30px;
+}
+
+@media(max-width:767px){
+    .navbar{
+        margin: auto;
+        width: auto;
+        height: auto;
+        display: flex;
+        box-sizing: border-box;
+        
+    }
+    .ulGroup{
+        margin: auto;
+        margin-bottom: 30px;
+        
+    }
+    .footerText{
+        text-align: center;
+    }
+}
+@media (min-width:768px) and (max-width:1024px){
+    .navbar{
+        margin: auto;
+        width: auto;
+        height: auto;
+        display: flex;
+        box-sizing: border-box;
+        
+    }
+   
+    .ulGroup{
+        margin: auto;
+        margin-bottom: 30px;
+        
+    }
+    .footerText{
+        text-align: center;
+    }
+}
