--- a/src/pages/dashboards/css/Menyu.module.css
+++ b/src/pages/dashboards/css/Menyu.module.css
@@ -7,3 +7,16 @@
 body{
     overflow-x: hidden;
 }
+@media(max-width:767px){
+    body{
+        overflow-x: hidden;
+
+    }
+    
+}
+@media(min-width:767px) and (max-width:1023px){
+    body{
+        overflow-x: hidden;
+    }
+
+}
