--- a/src/pages/dashboards/css/Navbar4.module.css
+++ b/src/pages/dashboards/css/Navbar4.module.css
@@ -117,16 +117,17 @@ margin-left: 35px;
 
     }
     .standUpInText{
-        font-size: 30px;
+        font-size: 20px;
+        line-height: 30px;
     }
     .standUpClose{
-        font-size: 60px;
-        margin-top: 200px;
+        font-size: 40px;
+        margin-top: 40%;
 
     }
     .standUpOpen{
-        font-size: 60px;
-        margin-top: -30px;
+        font-size: 40px;
+        margin-top: -5%;
     }
 
 }
