--- a/src/pages/dashboards/css/Footer.module.css
+++ b/src/pages/dashboards/css/Footer.module.css
@@ -172,7 +172,7 @@ border-radius: 4px;
     .pay{width: 100%;}
     }
 
-    
+    /* BU Footer Group ME */
 
 .headers{
     width: 100%;
@@ -255,7 +255,7 @@ border-radius: 4px;
     position: inherit;
     margin-top: 30px;;
     height: 41px;
-    width: 250px;
+    width: 200px;
     display: flex;
 
 
