--- a/src/pages/dashboards/css/Menyu.module.css
+++ b/src/pages/dashboards/css/Menyu.module.css
@@ -9,14 +9,15 @@ body{
 }
 @media(max-width:767px){
     body{
-        overflow-x: hidden;
+        overflow-x: none;
+        
 
     }
     
 }
 @media(min-width:767px) and (max-width:1023px){
     body{
-        overflow-x: hidden;
+        overflow-x: none;
     }
 
 }
