--- a/src/pages/dashboards/css/Navbar2.module.css
+++ b/src/pages/dashboards/css/Navbar2.module.css
@@ -215,6 +215,8 @@ top: 370px;
         width: 200px;
         height: 210px;
         margin: auto;
+        margin-top: 20px;
+        margin-left: 25%;
         overflow-x: hidden;
         background-color: rgb(50, 60, 63);
     
