--- a/src/pages/dashboards/css/Course.module.css
+++ b/src/pages/dashboards/css/Course.module.css
@@ -7,7 +7,7 @@
 .HeaderMenu{
     width: 100%;
     background-color: white;
-    margin-top: 0px;
+    margin-top: 115px;
     margin-bottom: 40px;
 }
 .BodyMenu{
@@ -22,6 +22,7 @@
     background-color: #F8F8F8;
     border-radius: 5px;
     margin: auto;
+    margin-top: 150px;
     
 }
 
@@ -41,7 +42,7 @@
 
 }
 .TextMeSmall{
-    width: 70%;
+    width: 60%;
     font-size: 25px;
     margin-left: 20px;
     font-weight: 700;
@@ -49,7 +50,7 @@
 }
 
 .ImgMeHead{
-    width: 45%;
+    width: 38%;
     height: 100%;
     
 }
@@ -153,6 +154,7 @@
     justify-content: space-between;
     margin-top: 30px;
     background-color: #F8F8F8;
+    margin-bottom: 30px;
 
 }
 .ArrivedFinishSertificate{
@@ -168,8 +170,10 @@
     box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
     cursor: pointer;
 }
-.ArrivedFinishSertificate h1{
+.ArrivedFinishSertificate h2{
     margin-top: 30px;
+    font-weight: bold;
+    
 }
 .ArrivedFinishSertificate p{
     margin: auto;
@@ -188,7 +192,7 @@
     .CoureselImg{
         width: 100%;
         height: 200px;
-        margin-top: 10px;
+        margin-top: 30px;
         background: url(../img/brand4.jpg);
         
     }
@@ -254,7 +258,7 @@
     .CoureselImg{
         width: 90%;
          height: 600px;
-         margin-top: 10px;
+         margin-top: 30px;
 
         
     }
