--- a/src/pages/dashboards/css/Navbar3.module.css
+++ b/src/pages/dashboards/css/Navbar3.module.css
@@ -71,3 +71,136 @@ text-align:center;
     position: absolute;
     bottom: 20px;
 }
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+
+}
+.CardOutMe{
+    width: 100%;
+    height: auto;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    display: flex;
+    justify-content: space-between;
+}
+.CardOutMeDesign{
+    width: 100%;
+    height: auto;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    display: flex;
+    justify-content: space-between;
+}
+.CardMeDesign{
+    width: 45%;
+
+}
+.CardMe{
+    position: relative;
+    width: 31%;
+    height: auto;
+    cursor: pointer;
+}
+.CardMe:hover{
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;}
+.CourseThemeText{
+    font-size: 25px;
+    font-weight: bold;
+    border-radius: nullpx;
+    font-family: SF Pro Display;
+    font-size: 20px;
+    line-height: 29px;
+    letter-spacing: 0em;
+    text-align: left;
+}
+.CardPriceTimeSmall{
+    display: flex;
+    justify-content: space-between;
+}
+.JavaPragram{
+    position: absolute;
+    width:120px;
+    height: 25px;
+    margin-top: -73%;
+    background-color: #16A085;
+    color: white;
+    font-size: 15px;
+    text-align: center;
+    border-radius: 3px;
+
+}
+
+@media(max-width:767px){
+    .CardMe{
+        width: 100%;
+        display: block;
+        margin: 20px;
+        margin-left:0px;
+
+        
+    }
+    .CardOutMeDesign{
+        display: block;
+        width: 100%;
+    }
+    .CardMeDesign{
+        width: 100%;
+        margin-top: 20px;
+    }
+    .CardOutMe{
+        position: relative;
+        display: block;
+        width: 100%;
+        margin: auto;
+    }
+    .JavaPragram{
+        display: none; 
+    }
+    .JavaPragramF{
+        display: none;
+
+    }
+}
+
+@media(min-width:768px) and (max-width:1023px){
+    .CardMe{
+        width: 47%;
+        display: block;
+        display: inline-block;
+        margin: 20px;
+        margin-left:0px;
+
+        
+    }
+    .CardOutMe{
+        position: relative;
+        display: block;
+        width: 100%;
+        margin: auto;
+        justify-content: flex-start;
+        box-sizing: border-box;
+        
+    }
+    .JavaPragram{
+        display: none;
+    }
+    .JavaPragramF{
+        display: none;
+
+    }
+}
+.JavaPragramF{
+    position: absolute;
+    width:120px;
+    height: 25px;
+    margin-top: 15px;
+    margin-left: 10px;
+    background-color: #16A085;
+    color: white;
+    font-size: 15px;
+    text-align: center;
+    border-radius: 3px;
+}
