--- a/src/pages/dashboards/css/Navbar4.module.css
+++ b/src/pages/dashboards/css/Navbar4.module.css
@@ -90,7 +90,8 @@ margin-left: 35px;
     text-align: end;
     
     margin-top: 30px;
-    font-size: 25px;
+    font-size: 33px;
+    font-weight: 500;
 }
 .TextMeCenterUp{
     width: 80%;
@@ -108,6 +109,9 @@ margin-left: 35px;
     }
     .CardTextFrond{
         font-size: 15px;
+    }
+    .StivName{
+        font-size: 25px;
     }
 }
 @media (max-width:767px){
@@ -128,6 +132,9 @@ margin-left: 35px;
     .standUpOpen{
         font-size: 40px;
         margin-top: -5%;
+    }
+    .StivName{
+        font-size: 25px;
     }
 
 }
