--- a/src/pages/dashboards/css/Navbar2.module.css
+++ b/src/pages/dashboards/css/Navbar2.module.css
@@ -3,7 +3,7 @@ position:relative;
 background-color: #E5E5E5;
 width: 100%;
 height: auto;
-
+overflow-x: hidden;
 
 } 
 .title{
@@ -30,7 +30,6 @@ color: #2E2E2E;
 }
 .RowMeTop{
     width: 100%;
-    margin: auto;
     margin-bottom: 30px;
 
 }
@@ -41,21 +40,17 @@ color: #2E2E2E;
     position:absolute;
     height: 30px;
     width: 120px;
-    right: 24px;
     top: 24px;
     border-radius: 4px;
 }
 .c1{
-    padding-top: 10px;
+    padding: 10px;
     text-align: center;
 font-size:20px;
-    height: 50px;
-width: 230px;
-margin-left: 50px;
-margin-top: 30px;
+margin: 20px;
 border-radius: 4px;
 background: #FFFFFF;
-box-shadow: 0px 12px 30px 0px #536DFD26;
+box-shadow: 0px 12px 30px #536DFD26;
 cursor: pointer;
 
 }
@@ -67,96 +62,7 @@ cursor: pointer;
  color: black;
 
 }
-.c2{
-    text-align: center;
-padding-top: 10px;
-    height: 50px;
-    font-size:20px;
-width: 230px;
-margin-left: 50px;
-margin-top: 30px;
-border-radius: 4px;
-background: #FFFFFF;
-box-shadow: 0px 12px 30px 0px #536DFD26;
 
-}
-.c3{
-    text-align: center;
-padding-top: 10px;
-    height: 50px;
-    font-size: 20px;
-width: 230px;
-margin-left: 50px;
-margin-top: 30px;
-border-radius: 4px;
-background: #FFFFFF;
-box-shadow: 0px 12px 30px 0px #536DFD26;
-
-}
-.c4{
-    text-align: center;
-padding-top: 10px;
-font-size:20px;
-    height: 50px;
-width: 230px;
-margin-left: 50px;
-margin-top: 30px;
-border-radius: 4px;
-background: #FFFFFF;
-box-shadow: 0px 12px 30px 0px #536DFD26;
-
-}
-.c5{
-    text-align: center;
-padding-top: 10px;
-    height: 50px;
-    font-size:20px;
-width: 230px;
-margin-left: 50px;
-margin-top: 30px;
-border-radius: 4px;
-background: #FFFFFF;
-box-shadow: 0px 12px 30px 0px #536DFD26;
-
-}
-.c6{
-    text-align: center;
-padding-top: 10px;
-    height: 50px;
-font-size: 20px;
-    width: 230px;
-    margin-left: 50px;
-    margin-top: 30px;
-border-radius: 4px;
-background: #FFFFFF;
-box-shadow: 0px 12px 30px 0px #536DFD26;
-
-}
-.c7{
-    text-align: center;
-padding-top: 10px;
-    height: 50px;
-width: 230px;
-margin-left: 50px;
-margin-top: 30px;
-border-radius: 4px;
-background: #FFFFFF;
-box-shadow: 0px 12px 30px 0px #536DFD26;
-font-size: 20px;
-}
-.c8{
-    font-size: 20px;
-    text-align: center;
-padding-top: 10px;
-    height: 50px;
-width: 230px;
-margin-left: 50px;
-margin-top: 30px;
-border-radius: 4px;
-background: #FFFFFF;
-box-shadow: 0px 12px 30px 0px #536DFD26;
-
-}
 .tema{
 font-family: SF Pro Display;
 font-size: 20px;
@@ -226,7 +132,6 @@ top: 370px;
         margin: auto;
         margin-top: 20px;
         margin-left: 25%;
-        overflow-x: hidden;
         background-color: rgb(50, 60, 63);
     
     }
