--- a/src/pages/dashboards/css/Navbar3.module.css
+++ b/src/pages/dashboards/css/Navbar3.module.css
@@ -124,7 +124,8 @@ text-align:center;
     position: absolute;
     width:120px;
     height: 25px;
-    margin-top: -73%;
+    top:20px;
+    left: 20px;
     background-color: #16A085;
     color: white;
     font-size: 15px;
