--- a/src/pages/dashboards/css/Footer.module.css
+++ b/src/pages/dashboards/css/Footer.module.css
@@ -252,62 +252,58 @@ border-radius: 4px;
     background-color:#9DA7BB;
 }
 .iconSites{
-    position: inherit;
-    margin-top: 30px;;
+    
     height: 41px;
     width: 200px;
     display: flex;
+}
 
 
-}
-.iconSites a{
-    position: inherit;
-    height: 30px;
-    width: 30px;
-    background-color: #EBEDF1;
-    color: #9DA7BB;
-    margin-inline: 10px;
-    border-radius: 50%;
-    cursor: pointer;
-    box-shadow: rgba(0, 0, 0, 0.02)
-     0px 1px 3px 0px, 
-     rgba(27, 31, 35, 0.15)
-      0px 0px 0px 1px;
 
+#iSites{
+    color: rgba(0, 0, 0, 0.507);
+    font-size: 20px;
+    z-index: 10;
 }
-.iconSites a:hover{
-    box-shadow: rgba(50, 50, 93, 0.25)
-     0px 6px 12px -2px,
-      rgba(0, 0, 0, 0.3)
-       0px 3px 7px -3px;
+#mSites{
+    color:rgba(0, 0, 0, 0.507);
+    margin:30px;
+    font-size: 30px;
+    margin-left:5px;
 }
-.instagramIcon {
-    display: inline-block;
-    text-align: center;
-    color: #fff;
-    vertical-align: middle;
-    background: #d6249f;
-    background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%);
-    box-shadow: 0px 3px 10px rgba(0,0,0,.25);
-  }
-.iconSites a i{
-  font-size: 20px;
-  margin-left: 4px;
-  margin-top: 6px;
+#mSites:hover{
+   scale: 1.2;
+color: black;
 }
-.iconSites a span{
-  font-size: 20px;
-  margin-left: 4px;
-  margin-top: 6px;
+#tSites:hover{
+    scale: 1.2;
+ color: blue;
+ 
+ }
+ #iSites:hover{
+    scale: 1.2;
+ color: black;
+ }
+#ySites:hover{
+   color: red;
+    scale: 1.2;
+}
+#ySites{
+    color:rgba(0, 0, 0, 0.507);
+    margin:30px;
+    font-size: 30px;
+    margin-left:5px;
 }
 #iSites{
-    position: inherit;
-    margin-left: 0px;
-    z-index: 1;
-    color: white;
-
+    color:rgba(0, 0, 0, 0.507);
+    margin:30px;
+    font-size: 30px;
+    margin-left:5px;
 }
-#fSites{
+#tSites{
+    color:rgba(0, 0, 0, 0.507);
+    margin:30px;
+    font-size: 30px;
     margin-left:5px;
 }
 .footerText{
