--- a/src/pages/dashboards/css/Navbar.module.css
+++ b/src/pages/dashboards/css/Navbar.module.css
@@ -236,7 +236,7 @@ cursor: pointer;
         font-size: 25px;
         line-height: 60px;
         margin-top: 20px;
-        color: #fffff;
+        color: #ffffff;
         margin-left: 20px;
         }
         .CardMe4{
