--- a/src/pages/dashboards/css/NavbarGroup.module.css
+++ b/src/pages/dashboards/css/NavbarGroup.module.css
@@ -20,12 +20,15 @@ margin-left: auto;
         margin:auto;
         align-items: right;
         border-radius: 5px;
-        width: 200px;
-        background-color: rgb(160, 137, 243);
+        width: 70vw;
+        background-color: rgba(13, 0, 59, 0.781);
         }
         #Nav1 .Nav2{
-            padding-left: 24px;
-            font-size: 14px;
+            margin: auto;
+            text-align: center;
+            font-size: 24px;
+            color: lavenderblush;
+            text-shadow: 0px 0px 40px white;
         }
 
  .Navbar1{
