--- a/src/pages/dashboards/css/Navbar.module.css
+++ b/src/pages/dashboards/css/Navbar.module.css
@@ -7,7 +7,7 @@
 .HeaderMenu{
     width: 100%;
     height: 600px;
-    background-color: #536DFD;
+    background-color: #120c3b;
     display: flex;
     margin-top: 100px;
     
@@ -23,7 +23,7 @@
 .CircleYellow{
     height: 550px;
     width: 550px;
-    background-color: #FFD401;
+    background-color: #fa9905;
     margin-left: auto;
     border-bottom-left-radius: 50%;
     border-bottom-right-radius: 50%;
