--- a/src/pages/dashboards/css/Navbar2.module.css
+++ b/src/pages/dashboards/css/Navbar2.module.css
@@ -79,7 +79,7 @@ height: auto;
 .Navbar{
     margin: auto;
     text-align:center;
-    background-color: #2510dda4;
+    background-color: #120c3b;
 }
 .ContainerMenu{
     width:100%;
