--- a/src/pages/dashboards/css/Navbar3.module.css
+++ b/src/pages/dashboards/css/Navbar3.module.css
@@ -46,7 +46,7 @@ font-size: 14px;
 line-height: 17px;
 justify-content: center;
 text-align: center;
-background: #10C8A0;
+background: #120c3b;
 
 
 
